; ModuleID = '/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_cvec.c_addrange.c'
source_filename = "/home/carl/AnghaBench/postgres/src/backend/regex/extr_regc_cvec.c_addrange.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cvec = type { i32, i32, i8** }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.cvec*, i8*, i8*)* @addrange to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @addrange(%struct.cvec* %0, i8* %1, i8* %2) #0 {
  %4 = alloca %struct.cvec*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store %struct.cvec* %0, %struct.cvec** %4, align 8
  store i8* %1, i8** %5, align 8
  store i8* %2, i8** %6, align 8
  %7 = load %struct.cvec*, %struct.cvec** %4, align 8
  %8 = getelementptr inbounds %struct.cvec, %struct.cvec* %7, i32 0, i32 0
  %9 = load i32, i32* %8, align 8
  %10 = load %struct.cvec*, %struct.cvec** %4, align 8
  %11 = getelementptr inbounds %struct.cvec, %struct.cvec* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 4
  %13 = icmp slt i32 %9, %12
  %14 = zext i1 %13 to i32
  %15 = call i32 @assert(i32 %14)
  %16 = load i8*, i8** %5, align 8
  %17 = load %struct.cvec*, %struct.cvec** %4, align 8
  %18 = getelementptr inbounds %struct.cvec, %struct.cvec* %17, i32 0, i32 2
  %19 = load i8**, i8*** %18, align 8
  %20 = load %struct.cvec*, %struct.cvec** %4, align 8
  %21 = getelementptr inbounds %struct.cvec, %struct.cvec* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 8
  %23 = mul nsw i32 %22, 2
  %24 = sext i32 %23 to i64
  %25 = getelementptr inbounds i8*, i8** %19, i64 %24
  store i8* %16, i8** %25, align 8
  %26 = load i8*, i8** %6, align 8
  %27 = load %struct.cvec*, %struct.cvec** %4, align 8
  %28 = getelementptr inbounds %struct.cvec, %struct.cvec* %27, i32 0, i32 2
  %29 = load i8**, i8*** %28, align 8
  %30 = load %struct.cvec*, %struct.cvec** %4, align 8
  %31 = getelementptr inbounds %struct.cvec, %struct.cvec* %30, i32 0, i32 0
  %32 = load i32, i32* %31, align 8
  %33 = mul nsw i32 %32, 2
  %34 = add nsw i32 %33, 1
  %35 = sext i32 %34 to i64
  %36 = getelementptr inbounds i8*, i8** %29, i64 %35
  store i8* %26, i8** %36, align 8
  %37 = load %struct.cvec*, %struct.cvec** %4, align 8
  %38 = getelementptr inbounds %struct.cvec, %struct.cvec* %37, i32 0, i32 0
  %39 = load i32, i32* %38, align 8
  %40 = add nsw i32 %39, 1
  store i32 %40, i32* %38, align 8
  ret void
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
